--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "bcrypt": "^6.0.0",
+    "express-handlebars": "^8.0.3",
+    "express-session": "^1.19.0",
     "hbs": "^4.2.0",
     "pg": "^8.18.0",
     "reflect-metadata": "^0.2.2",
@@ -37,7 +40,9 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.2",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
